--- a/tools/tftp_serve/Cargo.toml
+++ b/tools/tftp_serve/Cargo.toml
@@ -6,5 +6,5 @@ edition = "2018"
 
 [dependencies]
 byteorder = "1"
-tokio = { version = "0.2", features = ["macros", "udp", "stream", "io-util", "fs"]}
+tokio = { version = "1", features = ["full"] }
 futures = "0.3"
